compiler/testData/diagnostics/tests/nothingBound.kt
// ISSUE: KT-70352

fun <<!CONFLICTING_UPPER_BOUNDS!>T<!>: <!FINAL_UPPER_BOUND!>Nothing<!>> f() {}
